# Scalable-Live-Stream-Ingest-and-Distributed-System

./: CMakeLists.txt  README.txt
include/: live_stream_system.h
src/: CMakeLists.txt  load_balancer.c  load_balancer.h  main.c  rtmp_ingest.c  rtmp_ingest.h  transcoding.c  transcoding.h
src/ingest/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
